--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ p.txtplusgros > a {
   font-size: 1.2em;
 }
 .presentation, .contact{
-  margin-top: 10px;
+  margin-top: 3%;
 }
 .presentation > p, .contact > a {
   margin-top: 0px;
@@ -89,10 +89,14 @@ margin-top: 0.5em;
 }
 
 @media (max-width: 990px) {
+  .header > a{
+    font-size: 4.5em;
+  }
   .presentation > p{
-    font-size: 3em;
+    font-size: 4em;
   }
   .presentation{
     width: 100%;
+    margin-top: 10%;
   }
 }
