--- a/css/main.css
+++ b/css/main.css
@@ -99,4 +99,14 @@ margin-top: 0.5em;
     width: 100%;
     margin-top: 10%;
   }
+  .contact {
+    text-align: left;
+    /* width: 49%; */
+    display: block;
+    float: left;
+}
+.contact > a, p.txtplusgros {
+    font-size: 3.5em;
+}
+
 }
